sjc/src/main/java/sjc/parser/StaticJavaParser.java
// $ANTLR 3.5 /compiler-sjc/src-sjc/sjc/parser/StaticJava.g 2013-07-08 18:25:41

package sjc.parser;

import java.math.BigInteger;
/**
 * StaticJava parser.
 *
 * @author robby
 */
import org.antlr.runtime.BitSet;
import org.antlr.runtime.FailedPredicateException;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;

@SuppressWarnings("all")
public class StaticJavaParser extends Parser {
  public static final String[] tokenNames = new String[] { "<invalid>",
      "<EOR>", "<DOWN>", "<UP>", "ID", "NUM_INT", "WS", "'!'", "'!='", "'%'",
      "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "';'",
      "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'['", "']'", "'boolean'",
      "'class'", "'else'", "'false'", "'if'", "'int'", "'null'", "'public'",
      "'return'", "'static'", "'true'", "'void'", "'while'", "'{'", "'||'",
      "'}'" };
  public static final int EOF = -1;
  public static final int T__7 = 7;
  public static final int T__8 = 8;
  public static final int T__9 = 9;
  public static final int T__10 = 10;
  public static final int T__11 = 11;
  public static final int T__12 = 12;
  public static final int T__13 = 13;
  public static final int T__14 = 14;
  public static final int T__15 = 15;
  public static final int T__16 = 16;
  public static final int T__17 = 17;
  public static final int T__18 = 18;
  public static final int T__19 = 19;
  public static final int T__20 = 20;
  public static final int T__21 = 21;
  public static final int T__22 = 22;
  public static final int T__23 = 23;
  public static final int T__24 = 24;
  public static final int T__25 = 25;
  public static final int T__26 = 26;
  public static final int T__27 = 27;
  public static final int T__28 = 28;
  public static final int T__29 = 29;
  public static final int T__30 = 30;
  public static final int T__31 = 31;
  public static final int T__32 = 32;
  public static final int T__33 = 33;
  public static final int T__34 = 34;
  public static final int T__35 = 35;
  public static final int T__36 = 36;
  public static final int T__37 = 37;
  public static final int T__38 = 38;
  public static final int T__39 = 39;
  public static final int T__40 = 40;
  public static final int T__41 = 41;
  public static final int T__42 = 42;
  public static final int T__43 = 43;
  public static final int ID = 4;
  public static final int NUM_INT = 5;
  public static final int WS = 6;

  public static final BitSet FOLLOW_classDefinition_in_compilationUnit39 = new BitSet(
      new long[] { 0x0000000000000000L });

  // delegators

  public static final BitSet FOLLOW_EOF_in_compilationUnit43 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_35_in_classDefinition54 = new BitSet(
      new long[] { 0x0000000020000000L });

  public static final BitSet FOLLOW_29_in_classDefinition56 = new BitSet(
      new long[] { 0x0000000000000010L });
  public static final BitSet FOLLOW_ID_in_classDefinition58 = new BitSet(
      new long[] { 0x0000020000000000L });

  public static final BitSet FOLLOW_41_in_classDefinition60 = new BitSet(
      new long[] { 0x0000000800000000L });

  public static final BitSet FOLLOW_mainMethodDeclaration_in_classDefinition65 = new BitSet(
      new long[] { 0x0000082000000000L });

  public static final BitSet FOLLOW_fieldDeclaration_in_classDefinition71 = new BitSet(
      new long[] { 0x0000082000000000L });

  public static final BitSet FOLLOW_methodDeclaration_in_classDefinition77 = new BitSet(
      new long[] { 0x0000082000000000L });

  public static final BitSet FOLLOW_43_in_classDefinition84 = new BitSet(
      new long[] { 0x0000000000000002L });

  public static final BitSet FOLLOW_35_in_mainMethodDeclaration95 = new BitSet(
      new long[] { 0x0000002000000000L });

  public static final BitSet FOLLOW_37_in_mainMethodDeclaration97 = new BitSet(
      new long[] { 0x0000008000000000L });

  public static final BitSet FOLLOW_39_in_mainMethodDeclaration99 = new BitSet(
      new long[] { 0x0000000000000010L });

  public static final BitSet FOLLOW_ID_in_mainMethodDeclaration108 = new BitSet(
      new long[] { 0x0000000000000800L });

  public static final BitSet FOLLOW_11_in_mainMethodDeclaration123 = new BitSet(
      new long[] { 0x0000000000000010L });

  public static final BitSet FOLLOW_ID_in_mainMethodDeclaration127 = new BitSet(
      new long[] { 0x0000000004000000L });

  public static final BitSet FOLLOW_26_in_mainMethodDeclaration129 = new BitSet(
      new long[] { 0x0000000008000000L });

  public static final BitSet FOLLOW_27_in_mainMethodDeclaration131 = new BitSet(
      new long[] { 0x0000000000000010L });

  public static final BitSet FOLLOW_ID_in_mainMethodDeclaration146 = new BitSet(
      new long[] { 0x0000000000001000L });

  public static final BitSet FOLLOW_12_in_mainMethodDeclaration153 = new BitSet(
      new long[] { 0x0000020000000000L });

  public static final BitSet FOLLOW_41_in_mainMethodDeclaration155 = new BitSet(
      new long[] { 0x0000091310000010L });

  public static final BitSet FOLLOW_methodBody_in_mainMethodDeclaration157 = new BitSet(
      new long[] { 0x0000080000000000L });

  public static final BitSet FOLLOW_43_in_mainMethodDeclaration159 = new BitSet(
      new long[] { 0x0000000000000002L });

  public static final BitSet FOLLOW_37_in_fieldDeclaration171 = new BitSet(
      new long[] { 0x0000000210000000L });

  public static final BitSet FOLLOW_type_in_fieldDeclaration173 = new BitSet(
      new long[] { 0x0000000000000010L });

  public static final BitSet FOLLOW_ID_in_fieldDeclaration175 = new BitSet(
      new long[] { 0x0000000000080000L });

  public static final BitSet FOLLOW_19_in_fieldDeclaration177 = new BitSet(
      new long[] { 0x0000000000000002L });

  public static final BitSet FOLLOW_37_in_methodDeclaration189 = new BitSet(
      new long[] { 0x0000008210000000L });

  public static final BitSet FOLLOW_returnType_in_methodDeclaration191 = new BitSet(
      new long[] { 0x0000000000000010L });

  public static final BitSet FOLLOW_ID_in_methodDeclaration193 = new BitSet(
      new long[] { 0x0000000000000800L });

  public static final BitSet FOLLOW_11_in_methodDeclaration197 = new BitSet(
      new long[] { 0x0000000210001000L });

  public static final BitSet FOLLOW_params_in_methodDeclaration201 = new BitSet(
      new long[] { 0x0000000000001000L });

  public static final BitSet FOLLOW_12_in_methodDeclaration206 = new BitSet(
      new long[] { 0x0000020000000000L });

  public static final BitSet FOLLOW_41_in_methodDeclaration210 = new BitSet(
      new long[] { 0x0000091310000010L });

  public static final BitSet FOLLOW_methodBody_in_methodDeclaration212 = new BitSet(
      new long[] { 0x0000080000000000L });

  // Delegated rules

  public static final BitSet FOLLOW_43_in_methodDeclaration214 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_39_in_returnType240 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_type_in_returnType244 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_param_in_params256 = new BitSet(
      new long[] { 0x0000000000008002L });
  public static final BitSet FOLLOW_15_in_params260 = new BitSet(
      new long[] { 0x0000000210000000L });
  public static final BitSet FOLLOW_param_in_params262 = new BitSet(
      new long[] { 0x0000000000008002L });
  public static final BitSet FOLLOW_type_in_param277 = new BitSet(
      new long[] { 0x0000000000000010L });
  public static final BitSet FOLLOW_ID_in_param279 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_localDeclaration_in_methodBody290 = new BitSet(
      new long[] { 0x0000011310000012L });
  public static final BitSet FOLLOW_statement_in_methodBody296 = new BitSet(
      new long[] { 0x0000011100000012L });
  public static final BitSet FOLLOW_type_in_localDeclaration308 = new BitSet(
      new long[] { 0x0000000000000010L });
  public static final BitSet FOLLOW_ID_in_localDeclaration310 = new BitSet(
      new long[] { 0x0000000000080000L });
  public static final BitSet FOLLOW_19_in_localDeclaration312 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_assignStatement_in_statement326 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_ifStatement_in_statement332 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_whileStatement_in_statement338 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_invokeExpStatement_in_statement344 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_returnStatement_in_statement350 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_ID_in_assignStatement366 = new BitSet(
      new long[] { 0x0000000000400000L });
  public static final BitSet FOLLOW_22_in_assignStatement368 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_exp_in_assignStatement370 = new BitSet(
      new long[] { 0x0000000000080000L });
  public static final BitSet FOLLOW_19_in_assignStatement372 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_32_in_ifStatement384 = new BitSet(
      new long[] { 0x0000000000000800L });
  public static final BitSet FOLLOW_11_in_ifStatement386 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_exp_in_ifStatement388 = new BitSet(
      new long[] { 0x0000000000001000L });
  public static final BitSet FOLLOW_12_in_ifStatement390 = new BitSet(
      new long[] { 0x0000020000000000L });
  public static final BitSet FOLLOW_41_in_ifStatement394 = new BitSet(
      new long[] { 0x0000091100000010L });
  public static final BitSet FOLLOW_statement_in_ifStatement398 = new BitSet(
      new long[] { 0x0000091100000010L });
  public static final BitSet FOLLOW_43_in_ifStatement403 = new BitSet(
      new long[] { 0x0000000040000002L });
  public static final BitSet FOLLOW_30_in_ifStatement409 = new BitSet(
      new long[] { 0x0000020000000000L });
  public static final BitSet FOLLOW_41_in_ifStatement411 = new BitSet(
      new long[] { 0x0000091100000010L });
  public static final BitSet FOLLOW_statement_in_ifStatement415 = new BitSet(
      new long[] { 0x0000091100000010L });
  public static final BitSet FOLLOW_43_in_ifStatement422 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_40_in_whileStatement437 = new BitSet(
      new long[] { 0x0000000000000800L });
  public static final BitSet FOLLOW_11_in_whileStatement439 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_exp_in_whileStatement441 = new BitSet(
      new long[] { 0x0000000000001000L });
  public static final BitSet FOLLOW_12_in_whileStatement443 = new BitSet(
      new long[] { 0x0000020000000000L });
  public static final BitSet FOLLOW_41_in_whileStatement447 = new BitSet(
      new long[] { 0x0000091100000010L });
  public static final BitSet FOLLOW_statement_in_whileStatement451 = new BitSet(
      new long[] { 0x0000091100000010L });
  public static final BitSet FOLLOW_43_in_whileStatement456 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_invokeExp_in_invokeExpStatement468 = new BitSet(
      new long[] { 0x0000000000080000L });
  public static final BitSet FOLLOW_19_in_invokeExpStatement470 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_36_in_returnStatement482 = new BitSet(
      new long[] { 0x00000044800948B0L });
  public static final BitSet FOLLOW_exp_in_returnStatement486 = new BitSet(
      new long[] { 0x0000000000080000L });
  public static final BitSet FOLLOW_19_in_returnStatement491 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_logicalOrExp_in_exp503 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_logicalAndExp_in_logicalOrExp515 = new BitSet(
      new long[] { 0x0000040000000002L });
  public static final BitSet FOLLOW_42_in_logicalOrExp519 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_logicalAndExp_in_logicalOrExp521 = new BitSet(
      new long[] { 0x0000040000000002L });
  public static final BitSet FOLLOW_equalityExp_in_logicalAndExp536 = new BitSet(
      new long[] { 0x0000000000000402L });
  public static final BitSet FOLLOW_10_in_logicalAndExp540 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_equalityExp_in_logicalAndExp542 = new BitSet(
      new long[] { 0x0000000000000402L });
  public static final BitSet FOLLOW_relationalExp_in_equalityExp557 = new BitSet(
      new long[] { 0x0000000000800102L });
  public static final BitSet FOLLOW_set_in_equalityExp561 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_relationalExp_in_equalityExp569 = new BitSet(
      new long[] { 0x0000000000800102L });
  public static final BitSet FOLLOW_additiveExp_in_relationalExp584 = new BitSet(
      new long[] { 0x0000000003300002L });
  public static final BitSet FOLLOW_set_in_relationalExp588 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_additiveExp_in_relationalExp606 = new BitSet(
      new long[] { 0x0000000003300002L });
  public static final BitSet FOLLOW_multiplicativeExp_in_additiveExp621 = new BitSet(
      new long[] { 0x0000000000014002L });
  public static final BitSet FOLLOW_set_in_additiveExp625 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_multiplicativeExp_in_additiveExp635 = new BitSet(
      new long[] { 0x0000000000014002L });
  public static final BitSet FOLLOW_unaryExp_in_multiplicativeExp650 = new BitSet(
      new long[] { 0x0000000000042202L });
  public static final BitSet FOLLOW_set_in_multiplicativeExp654 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_unaryExp_in_multiplicativeExp668 = new BitSet(
      new long[] { 0x0000000000042202L });
  public static final BitSet FOLLOW_16_in_unaryExp683 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_unaryExp_in_unaryExp685 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_14_in_unaryExp690 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_unaryExp_in_unaryExp692 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_unaryExpNotPlusMinus_in_unaryExp697 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_7_in_unaryExpNotPlusMinus709 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_unaryExp_in_unaryExpNotPlusMinus711 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_primaryExp_in_unaryExpNotPlusMinus716 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_NUM_INT_in_primaryExp730 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_38_in_primaryExp739 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_31_in_primaryExp744 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_34_in_primaryExp749 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_11_in_primaryExp754 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_exp_in_primaryExp756 = new BitSet(
      new long[] { 0x0000000000001000L });
  public static final BitSet FOLLOW_12_in_primaryExp758 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_invokeExp_in_primaryExp763 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_ID_in_primaryExp768 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_ID_in_invokeExp782 = new BitSet(
      new long[] { 0x0000000000020000L });
  public static final BitSet FOLLOW_17_in_invokeExp784 = new BitSet(
      new long[] { 0x0000000000000010L });
  public static final BitSet FOLLOW_ID_in_invokeExp791 = new BitSet(
      new long[] { 0x0000000000000800L });
  public static final BitSet FOLLOW_11_in_invokeExp793 = new BitSet(
      new long[] { 0x00000044800158B0L });
  public static final BitSet FOLLOW_args_in_invokeExp797 = new BitSet(
      new long[] { 0x0000000000001000L });
  public static final BitSet FOLLOW_12_in_invokeExp802 = new BitSet(
      new long[] { 0x0000000000000002L });
  public static final BitSet FOLLOW_exp_in_args814 = new BitSet(
      new long[] { 0x0000000000008002L });
  public static final BitSet FOLLOW_15_in_args818 = new BitSet(
      new long[] { 0x00000044800148B0L });
  public static final BitSet FOLLOW_exp_in_args820 = new BitSet(
      new long[] { 0x0000000000008002L });

  public StaticJavaParser(final TokenStream input) {
    this(input, new RecognizerSharedState());
  }

  public StaticJavaParser(final TokenStream input,
      final RecognizerSharedState state) {
    super(input, state);
  }

  // $ANTLR start "additiveExp"
  // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:153:1: additiveExp : multiplicativeExp ( ( '+' | '-' ) multiplicativeExp )* ;
  public final void additiveExp() throws RecognitionException {
    try {
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:154:2: ( multiplicativeExp ( ( '+' | '-' ) multiplicativeExp )* )
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:154:4: multiplicativeExp ( ( '+' | '-' ) multiplicativeExp )*
      {
        pushFollow(StaticJavaParser.FOLLOW_multiplicativeExp_in_additiveExp621);
        multiplicativeExp();
        this.state._fsp--;

        // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:154:22: ( ( '+' | '-' ) multiplicativeExp )*
        loop17: while (true) {
          int alt17 = 2;
          final int LA17_0 = this.input.LA(1);
          if (((LA17_0 == 14) || (LA17_0 == 16))) {
            alt17 = 1;
          }

          switch (alt17) {
            case 1:
            // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:154:24: ( '+' | '-' ) multiplicativeExp
            {
              if ((this.input.LA(1) == 14) || (this.input.LA(1) == 16)) {
                this.input.consume();
                this.state.errorRecovery = false;
              } else {
                final MismatchedSetException mse = new MismatchedSetException(
                    null, this.input);
                throw mse;
              }
              pushFollow(StaticJavaParser.FOLLOW_multiplicativeExp_in_additiveExp635);
              multiplicativeExp();
              this.state._fsp--;

            }
              break;

            default:
              break loop17;
          }
        }

      }

    }

    /**
     * Eliminate rule error recovery so that all parse errors cause exceptions
     * to propogate out of the top-level parse method.
     */

    finally {
      // do for sure before leaving
    }
  }

  // $ANTLR end "additiveExp"
  // $ANTLR start "args"
  // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:188:1: args : exp ( ',' exp )* ;
  public final void args() throws RecognitionException {
    try {
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:189:2: ( exp ( ',' exp )* )
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:189:4: exp ( ',' exp )*
      {
        pushFollow(StaticJavaParser.FOLLOW_exp_in_args814);
        exp();
        this.state._fsp--;

        // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:189:8: ( ',' exp )*
        loop24: while (true) {
          int alt24 = 2;
          final int LA24_0 = this.input.LA(1);
          if ((LA24_0 == 15)) {
            alt24 = 1;
          }

          switch (alt24) {
            case 1:
            // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:189:10: ',' exp
            {
              match(this.input, 15, StaticJavaParser.FOLLOW_15_in_args818);
              pushFollow(StaticJavaParser.FOLLOW_exp_in_args820);
              exp();
              this.state._fsp--;

            }
              break;

            default:
              break loop24;
          }
        }

      }

    }

    /**
     * Eliminate rule error recovery so that all parse errors cause exceptions
     * to propogate out of the top-level parse method.
     */

    finally {
      // do for sure before leaving
    }
  }

  // $ANTLR end "args"
  // $ANTLR start "assignStatement"
  // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:109:1: assignStatement : ID '=' exp ';' ;
  public final void assignStatement() throws RecognitionException {
    try {
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:110:2: ( ID '=' exp ';' )
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:110:4: ID '=' exp ';'
      {
        match(
            this.input,
            StaticJavaParser.ID,
            StaticJavaParser.FOLLOW_ID_in_assignStatement366);
        match(this.input, 22, StaticJavaParser.FOLLOW_22_in_assignStatement368);
        pushFollow(StaticJavaParser.FOLLOW_exp_in_assignStatement370);
        exp();
        this.state._fsp--;

        match(this.input, 19, StaticJavaParser.FOLLOW_19_in_assignStatement372);
      }

    }

    /**
     * Eliminate rule error recovery so that all parse errors cause exceptions
     * to propogate out of the top-level parse method.
     */

    finally {
      // do for sure before leaving
    }
  }

  // $ANTLR end "assignStatement"
  // $ANTLR start "classDefinition"
  // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:48:1: classDefinition : 'public' 'class' ID '{' mainMethodDeclaration ( fieldDeclaration | methodDeclaration )* '}' ;
  public final void classDefinition() throws RecognitionException {
    try {
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:49:2: ( 'public' 'class' ID '{' mainMethodDeclaration ( fieldDeclaration | methodDeclaration )* '}' )
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:49:4: 'public' 'class' ID '{' mainMethodDeclaration ( fieldDeclaration | methodDeclaration )* '}'
      {
        match(this.input, 35, StaticJavaParser.FOLLOW_35_in_classDefinition54);
        match(this.input, 29, StaticJavaParser.FOLLOW_29_in_classDefinition56);
        match(
            this.input,
            StaticJavaParser.ID,
            StaticJavaParser.FOLLOW_ID_in_classDefinition58);
        match(this.input, 41, StaticJavaParser.FOLLOW_41_in_classDefinition60);
        pushFollow(StaticJavaParser.FOLLOW_mainMethodDeclaration_in_classDefinition65);
        mainMethodDeclaration();
        this.state._fsp--;

        // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:51:3: ( fieldDeclaration | methodDeclaration )*
        loop1: while (true) {
          int alt1 = 3;
          final int LA1_0 = this.input.LA(1);
          if ((LA1_0 == 37)) {
            final int LA1_2 = this.input.LA(2);
            if (((LA1_2 == 28) || (LA1_2 == 33))) {
              final int LA1_3 = this.input.LA(3);
              if ((LA1_3 == StaticJavaParser.ID)) {
                final int LA1_5 = this.input.LA(4);
                if ((LA1_5 == 19)) {
                  alt1 = 1;
                } else if ((LA1_5 == 11)) {
                  alt1 = 2;
                }

              }

            } else if ((LA1_2 == 39)) {
              alt1 = 2;
            }

          }

          switch (alt1) {
            case 1:
            // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:51:5: fieldDeclaration
            {
              pushFollow(StaticJavaParser.FOLLOW_fieldDeclaration_in_classDefinition71);
              fieldDeclaration();
              this.state._fsp--;

            }
              break;
            case 2:
            // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:52:5: methodDeclaration
            {
              pushFollow(StaticJavaParser.FOLLOW_methodDeclaration_in_classDefinition77);
              methodDeclaration();
              this.state._fsp--;

            }
              break;

            default:
              break loop1;
          }
        }

        match(this.input, 43, StaticJavaParser.FOLLOW_43_in_classDefinition84);
      }

    }

    /**
     * Eliminate rule error recovery so that all parse errors cause exceptions
     * to propogate out of the top-level parse method.
     */

    finally {
      // do for sure before leaving
    }
  }

  // $ANTLR end "classDefinition"
  // $ANTLR start "compilationUnit"
  // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:43:1: compilationUnit : classDefinition EOF ;
  public final void compilationUnit() throws RecognitionException {
    try {
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:44:2: ( classDefinition EOF )
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:44:4: classDefinition EOF
      {
        pushFollow(StaticJavaParser.FOLLOW_classDefinition_in_compilationUnit39);
        classDefinition();
        this.state._fsp--;

        match(
            this.input,
            StaticJavaParser.EOF,
            StaticJavaParser.FOLLOW_EOF_in_compilationUnit43);
      }

    }

    /**
     * Eliminate rule error recovery so that all parse errors cause exceptions
     * to propogate out of the top-level parse method.
     */

    finally {
      // do for sure before leaving
    }
  }

  // $ANTLR end "compilationUnit"
  // $ANTLR start "equalityExp"
  // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:145:1: equalityExp : relationalExp ( ( '!=' | '==' ) relationalExp )* ;
  public final void equalityExp() throws RecognitionException {
    try {
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:146:2: ( relationalExp ( ( '!=' | '==' ) relationalExp )* )
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:146:4: relationalExp ( ( '!=' | '==' ) relationalExp )*
      {
        pushFollow(StaticJavaParser.FOLLOW_relationalExp_in_equalityExp557);
        relationalExp();
        this.state._fsp--;

        // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:146:18: ( ( '!=' | '==' ) relationalExp )*
        loop15: while (true) {
          int alt15 = 2;
          final int LA15_0 = this.input.LA(1);
          if (((LA15_0 == 8) || (LA15_0 == 23))) {
            alt15 = 1;
          }

          switch (alt15) {
            case 1:
            // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:146:20: ( '!=' | '==' ) relationalExp
            {
              if ((this.input.LA(1) == 8) || (this.input.LA(1) == 23)) {
                this.input.consume();
                this.state.errorRecovery = false;
              } else {
                final MismatchedSetException mse = new MismatchedSetException(
                    null, this.input);
                throw mse;
              }
              pushFollow(StaticJavaParser.FOLLOW_relationalExp_in_equalityExp569);
              relationalExp();
              this.state._fsp--;

            }
              break;

            default:
              break loop15;
          }
        }

      }

    }

    /**
     * Eliminate rule error recovery so that all parse errors cause exceptions
     * to propogate out of the top-level parse method.
     */

    finally {
      // do for sure before leaving
    }
  }

  // $ANTLR end "equalityExp"
  // $ANTLR start "exp"
  // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:133:1: exp : logicalOrExp ;
  public final void exp() throws RecognitionException {
    try {
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:134:2: ( logicalOrExp )
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:134:4: logicalOrExp
      {
        pushFollow(StaticJavaParser.FOLLOW_logicalOrExp_in_exp503);
        logicalOrExp();
        this.state._fsp--;

      }

    }

    /**
     * Eliminate rule error recovery so that all parse errors cause exceptions
     * to propogate out of the top-level parse method.
     */

    finally {
      // do for sure before leaving
    }
  }

  // $ANTLR end "exp"
  // $ANTLR start "fieldDeclaration"
  // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:66:1: fieldDeclaration : 'static' type ID ';' ;
  public final void fieldDeclaration() throws RecognitionException {
    try {
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:67:2: ( 'static' type ID ';' )
      // /compiler-sjc/src-sjc/sjc/parser/StaticJava.g:67:4: 'static' type ID ';'
      {
        match(this.input, 37, StaticJavaParser.FOLLOW_37_in_fieldDeclaration171);
        pushFollow(StaticJavaParser.FOLLOW_type_in_fieldDeclaration173);
        type();
        this.state._fsp--;
